--- a/src/app/views/portal/vehicle-list/vehicle-list.component.html
+++ b/src/app/views/portal/vehicle-list/vehicle-list.component.html
@@ -1,4 +1,3 @@
-<p>vehicle-list works!</p>
 <p-table [value]="vehicles" [tableStyle]="{ 'min-width': '50rem' }">
   <ng-template pTemplate="header">
       <tr>
@@ -14,14 +13,21 @@
   </ng-template>
   <ng-template pTemplate="body" let-vehicle>
       <tr>
-          <td>{{ vehicle.name }}</td>
+          <td>{{ vehicle.name | VehicleNamePipe }}</td>
           <td>{{ vehicle.manufacturer }}</td>
           <td>{{ vehicle.model }}</td>
           <td>{{ vehicle.year }}</td>
           <td>{{ vehicle.type }}</td>
           <td>{{ vehicle.fuelType }}</td>
           <td>{{ vehicle.licensePlate }}</td>
-          <td>{{ vehicle.active }}</td>
+          <td>
+            <ng-container *ngIf="vehicle.active; else inactive">
+              <i class="pi pi-check-circle active-icon"></i>
+            </ng-container>
+            <ng-template #inactive>
+              <i class="pi pi-times-circle active-icon active-icon--red"></i>
+            </ng-template>
+          </td>
       </tr>
   </ng-template>
 </p-table>
