--- a/src/app/views/portal/portal.component.html
+++ b/src/app/views/portal/portal.component.html
@@ -1,5 +1,5 @@
 <p-toolbar styleClass="toolbar">
-    <p>Vehicle Overview App</p>
+    <h2>Vehicle Overview App</h2>
     <p-button label="Sign Out" (onClick)="signOut()"></p-button>
 </p-toolbar>
 <div class="content">
