--- a/src/app/views/portal/vehicle-list/vehicle-list.component.html
+++ b/src/app/views/portal/vehicle-list/vehicle-list.component.html
@@ -1,33 +1,41 @@
-<p-table [value]="vehicles" [tableStyle]="{ 'min-width': '50rem' }">
-  <ng-template pTemplate="header">
-      <tr>
-          <th>Name</th>
-          <th>Manufacturer</th>
-          <th>Model</th>
-          <th>Year</th>
-          <th>Type</th>
-          <th>Fuel type</th>
-          <th>License plate</th>
-          <th>Active</th>
-      </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-vehicle>
-      <tr>
-          <td>{{ vehicle.name | VehicleNamePipe }}</td>
-          <td>{{ vehicle.manufacturer }}</td>
-          <td>{{ vehicle.model }}</td>
-          <td>{{ vehicle.year }}</td>
-          <td>{{ vehicle.type }}</td>
-          <td>{{ vehicle.fuelType }}</td>
-          <td>{{ vehicle.licensePlate }}</td>
-          <td>
-            <ng-container *ngIf="vehicle.active; else inactive">
-              <i class="pi pi-check-circle active-icon"></i>
-            </ng-container>
-            <ng-template #inactive>
-              <i class="pi pi-times-circle active-icon active-icon--red"></i>
-            </ng-template>
-          </td>
-      </tr>
-  </ng-template>
-</p-table>
+<div class="search-wrapper">
+  <span class="p-input-icon-left">
+      <i class="pi pi-search"></i>
+      <input #searchQuery pInputText placeholder="Search" (input)="searchQuery$.next(searchQuery.value)"/>
+  </span>
+</div>
+<ng-container *ngIf="vehicles$ | async as vehicles">
+  <p-table [value]="vehicles" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Name</th>
+            <th>Manufacturer</th>
+            <th>Model</th>
+            <th>Year</th>
+            <th>Type</th>
+            <th>Fuel type</th>
+            <th>License plate</th>
+            <th>Active</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-vehicle>
+        <tr>
+            <td>{{ vehicle.name | VehicleNamePipe }}</td>
+            <td>{{ vehicle.manufacturer }}</td>
+            <td>{{ vehicle.model }}</td>
+            <td>{{ vehicle.year }}</td>
+            <td>{{ vehicle.type }}</td>
+            <td>{{ vehicle.fuelType }}</td>
+            <td>{{ vehicle.licensePlate }}</td>
+            <td>
+              <ng-container *ngIf="vehicle.active; else inactive">
+                <i class="pi pi-check-circle active-icon"></i>
+              </ng-container>
+              <ng-template #inactive>
+                <i class="pi pi-times-circle active-icon active-icon--red"></i>
+              </ng-template>
+            </td>
+        </tr>
+    </ng-template>
+  </p-table>
+</ng-container>
